2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/GtkDesignInfo.cs: When the stetic files
	  are generated for the first time, ensure that their write
	  date is < the write date of the .stetic file, otherwise they
	  won't be regenerated when building. Fixes bug #483970 -
	  [Regression] Default C# Gtk# app no longer builds.

2009-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Flush.

2009-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GtkProjectServiceExtension.cs:
	  Don't try to generate files when not building inside the
	  IDE.

2009-02-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/GtkDesignInfo.cs: In
	  ForceCodeGenerationOnBuild, force a rebuild of the project
	  too. Fixes bug #472683.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.csproj: Flush.

2009-02-26  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/ProjectResourcesProvider.cs: lookup mime
	type and use more specific ResourceInfo ctor. [Fixes #475820]

2009-02-26  Mike Kestner <mkestner@novell.com> 

	* libsteticui/WidgetDesignerBackend.cs: implement Delete key 
	support.  [Fixes #470637]

2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/ToolboxProvider.cs: Added
	  explicit "Misc" category for localization.

2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/ToolboxProvider.cs: Worked on
	  propertygrid localization.

2009-02-25  Mike Kestner <mkestner@novell.com> 

	* libsteticui/ApplicationBackend.cs: Reload the registry libraries
	in LoadLibraries, since adding a library doesn't necessarily refresh
	an out-of-date previously registered library.
	* libsteticui/CecilWidgetLibrary.cs: enhance NeedsReload check to 
	use a cache refresh and the new change notification so that the
	library stays 'dirty' until it's reloaded.
	* libsteticui/LibraryCache.cs: add change notification for cache items.